--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,16 @@ body {
   letter-spacing: 0.03em;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
 .container {
   width: 1200px;
   margin-left: auto;
