--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 @import './utils/variables';
 // base styles
 @import './base/base';
+@import './base/reset';
 // components styles
 @import './components/container';
 @import './components/typegraphis';
