--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,3 +14,4 @@
 @import './components/section-five';
 @import './components/section-six';
 @import './components/footer';
+@import './components/modal';
